# ChangeLog for dev-util/unifdef
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/unifdef/ChangeLog,v 1.7 2010/01/09 03:18:57 abcd Exp $

  09 Jan 2010; Jonathan Callen <abcd@gentoo.org> unifdef-1.23.ebuild:
  Remove unneeded sed; add prefix keywords

*unifdef-1.23 (19 May 2009)

  19 May 2009; Mike Frysinger <vapier@gentoo.org> +unifdef-1.23.ebuild:
  Version bump.

  19 May 2009; Mike Frysinger <vapier@gentoo.org> unifdef-1.20.ebuild:
  Fix build error with glibc-2.10 due to getline() #270369 by Harris
  Landgarten.

  23 May 2007; Diego Pettenò <flameeyes@gentoo.org> unifdef-1.20.ebuild:
  Replace ~x86-fbsd with -x86-fbsd and add -sparc-fbsd, as this package is not
  needed there.

  03 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> unifdef-1.20.ebuild:
  Add ~x86-fbsd keyword.

*unifdef-1.0 (08 Oct 2006)

  08 Oct 2006; Mike Frysinger <vapier@gentoo.org> +unifdef-1.20.ebuild:
  Initial import.  Ebuild submitted by me.