@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST unifdef-1.20.tar.bz2 65748 RMD160 030567f7f07c9033cf29d00d95eea7558e5ccf81 SHA1 12595e650502134b40bc1689dd3c946b46a98dff SHA256 8fa08acda5d6a6bb162ba240bc368b975942be35f7bd334da7d2b29243471bba
 DIST unifdef-1.23.tar.lzma 61662 RMD160 5f9365594d17774a232b8fc875fcaf9c4b8756bf SHA1 c78996d531c391aefbd969b7ff7c314f4eb30387 SHA256 c61b974277a2d10c70f72d17231529439707ea226c411febaf79597da606b207
 EBUILD unifdef-1.20.ebuild 752 RMD160 0c4c4d2c12afa45c20b1a64d1c69d44b922b179f SHA1 4313b296cbfcd2245af78c1c0a48586d77def469 SHA256 f78d3476d8bc0c251e48e0e6083d5150c4be948d8251230b3b5edc92ab569269
-EBUILD unifdef-1.23.ebuild 674 RMD160 e7629c45a03dd7ea435d5c43e99d87b2fc3bd96f SHA1 9717514de2b34958152a05f1e987a6917c22eac9 SHA256 bd2dea344314ec85c76b7f83607c17d4d28bdd5a8f2e7939a4be31c116fd4c63
-MISC ChangeLog 1003 RMD160 7cf67bd01eb134c3b045c6c461a6d2cdd0b5f51c SHA1 3485394f5f44c3e065338a093de5a0edcde8ffb5 SHA256 31f4be85e4f3521f704698be655dba8c5a9a21a234141b9d8e86123b20a4ac0e
+EBUILD unifdef-1.23.ebuild 715 RMD160 a91feabb3f01736a307d547e03096b5b925bfa87 SHA1 12fd5eef383f0fbe74b2e3985296427b1f90f93b SHA256 3a3997059a5590527c5d247c0275c45e50d3ddc4b1bc1fc2cb6f6ae01202c2fc
+MISC ChangeLog 1128 RMD160 8bf6224b24749f230faeb837cb93e43a740c03cf SHA1 dbc8196cdaeeb7b1da177034533d8b7a94b91e14 SHA256 d75fa8c5949efefafa66de9d026130a1bf93d103bc7b4f15ad09f2f73a1be658
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktH9a0ACgkQOypDUo0oQOrdtgCgw06nSz98OMX2VVVJlhBb9abP
-AzoAoJrVU1c8FaVMhwc9L2f8XJunc6S/
-=8C7T
+iF4EAREIAAYFAktP3doACgkQTwhj9JtAlp48ewEApa0rUVdbwc7OFZkQyrMw+1VH
+1MntI2rUleKB6zpSsWMBAMFNFxVE8K4RLRa6oTg4D14SuP7LP5GR8nNFXQ5arhEb
+=+BXU
 -----END PGP SIGNATURE-----
